# full-stack-todo-rust-course

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build-pull-request.yml  deploy-azure.yml  deploy-mikrus.yml  push-containers.yml  release.yml
database/: init.sql
frontend/rust/yew/: Cargo.toml  Dockerfile  index.html  trunk.toml
frontend/rust/yew/src/: app_context.rs  lib.rs  main.css  main.rs  router.rs  utils.rs
frontend/rust/yew/src/api/: api_client.rs  api_error_response.rs  api_settings.json  mod.rs
frontend/rust/yew/src/api/auth/: auth_service.rs
frontend/rust/yew/src/api/tasks/: mod.rs  task.rs  tasks_response.rs  tasks_service.rs  todo_task.rs
frontend/rust/yew/src/components/atoms/: button.rs  checkbox.rs  dropdown.rs  mod.rs  priority.rs  route_link.rs  text_display.rs  text_input.rs
frontend/rust/yew/src/components/molecules/: mod.rs  task.rs  theme_selector.rs
frontend/rust/yew/src/components/organisms/: error_message.rs  navbar.rs  tasks.rs
frontend/rust/yew/src/components/pages/: auth_data.rs  create_account.rs  error_data.rs  home.rs  login.rs  mod.rs  new_task.rs  task_details.rs
frontend/rust/yew/src/styles/: color.rs  styles.rs
frontend/rust/yew/todo_project/: Dockerfile  Trunk.toml
frontend/rust/yew/todo_project/src/: lib.rs
frontend/rust/yew/todo_project/src/components/organisms/: tasks.rs
frontend/rust/yew/todo_project/src/components/pages/: auth_data.rs  create_account.rs  login.rs  mod.rs  task_details.rs
frontend/rust/yew/todo_project/src/components/stores/: mod.rs
(+105 files in other folders)
