[package]
name = "todo_project"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
stylist = { version = "0.12.0", features = ["yew", "macros", "parser"] }
yew-router = "0.17.0"
yewdux = "0.9.0"
getrandom = { version = "0.2.7", features = ["js"] }
web-sys = { version = "0.3.60", features = ["HtmlInputElement"] }
gloo = "0.8.0"
reqwasm = "0.5.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
lazy_static = "1.4.0"
serde = "1.0.145"
serde_json = "1.0.85"
chrono = "0.4.22"
uuid = { version = "1.2.1", features = ["v4"] }
